--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev":"",
+    "dev": "npm-run-all --parallel clien:dev server:dev",
+    "clien:dev":"npm --prefix ./client/ run dev",
+    "server:dev":"npm --prefix ./server/ run dev", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
